add drugfast parse logic